--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,10 +1,13 @@
 
 .rodape{
+  bottom: 0;
+  position: fixed;
   background-color: #0063D4;
   display: flex;
   justify-content: space-evenly;
   margin-top: 30px;
   height: 90px;
+  width: 100%;
 }
 
 .li{
