--- a/src/pages/penalty/penatly.css
+++ b/src/pages/penalty/penatly.css
@@ -1,12 +1,18 @@
-
 .myButton2-penalty{
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+.wapper-penalty{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .content-penalty {
-  width: 85%;
+  width: 95%;
   height: 95%;
   display: flex;
   justify-content: center;
@@ -54,15 +60,15 @@
   }
 }
 
-/* button {
+.button {
   border: none;
   border-radius: 5px;
   background-color: #30B309;
   height: 40px;
-  width: 80px;
+  width: 75px;
   cursor: pointer;
   font-size: 10px;
-} */
+}
 
 .wapperBtn-penalty {
   display: flex;
@@ -75,25 +81,18 @@
   width: 60px;
 }
 
-/* p {
+.p {
   display: flex;
   justify-content: center;
   font-size: 20px;
   flex-direction: column;
   align-items: center;
-} */
-
+}
 
 .iframe-penalty {
   width: 95%;
   height: 95%;
 }
-
-/* iframe {
-
-  width: 100%;
-  height: 100%;
-} */
 
 .div6-penalty {
   display: flex;
