--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,6 @@
   list-style-type: none;
 }
 
-body {
-  height: 100vh;
-  width: 100vw;
-  background-color: #030036;
-  overflow-x: hidden;
-  position: relative;
-}
 
 header {
   display: flex;
@@ -20,6 +13,12 @@ header {
   align-items: center;
   flex-direction: column;
   height: 250px;
+}
+
+.wrapper-app{
+  position: relative;
+  width: 100vw;
+  overflow: hidden;
 }
 
 .imgSLD-Home{
