--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,44 @@
-*{
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  color: white;
   font-family: 'Poppins', sans-serif;
-  overflow-x: hidden; 
+  text-decoration: none;}
+
+body {
+  background-color: #030036;
+}
+
+button {
+  height: 40px;
+  width: 100px;
+  border: 0;
+  border-radius: 6px;
+  color: white;
+  background-color: #05a532;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+}
+
+body .content {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+}
+
+body .wrapper{
+  overflow: hidden;
+  overflow-y: scroll;
+  width: 95%;
+  max-width: 1440px;
+  height: 98vh;
+  background: #0063d4;
+  border-radius: 15px;
 }
