--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,4 +1,3 @@
-
 .rodape{
   bottom: 0;
   position: fixed;
@@ -15,6 +14,8 @@
   font-size: 2rem;
   display: flex;
   flex-direction: column;
+  width: 32px;
+  
 }
 
 .homeSvg{
@@ -28,16 +29,6 @@
 }
 
 .texteIcons{
-  font-size: 0.8rem;
-}
-
-.a{
-  display: flex;
-  justify-content: center;
-}
-
-.home{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  font-size: 0.5rem;
+  font-weight: 500;
 }
