--- a/src/pages/futebol/Futebol.css
+++ b/src/pages/futebol/Futebol.css
@@ -2,7 +2,7 @@
   height: 300px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around; 
+  justify-content: space-evenly; 
   align-items: center
 }
 
@@ -13,4 +13,8 @@
 
 .img-Futebol{
   width: 85px;
+}
+
+.protect-Futebol{
+  margin-bottom: 25px;
 }
