cria a pagina tiger

--- a/src/index.css
+++ b/src/index.css
@@ -35,11 +35,16 @@ body .content {
 
 body .wrapper{
   overflow: hidden;
+  overflow-y: scroll;
   width: 95%;
   max-width: 1440px;
   height: 98vh;
   background: #0063d4;
   border-radius: 15px;
+  /* display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; */
 }
 
 ul{
