--- a/src/pages/penalty/penatly.css
+++ b/src/pages/penalty/penatly.css
@@ -73,7 +73,7 @@
 
 .wapperBtn-penalty {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   width: 100%;
   margin-top: 20px;
 }
